# python-wrapped-fortran

./: .gitignore  Dockerfile  Makefile  README.md  gunicorn.conf.py  pyproject.toml
python/: config.py  logging_config.py  metrics.py  telemetry.py  wsgi.py
python/api/: actuator.py  routes.py
src/: calculator.f90  math_operations.f90
